#38 Loading javascript quote model without window.checkoutConfig available causes js error

--- a/view/frontend/templates/catalog/product/view/applepay.phtml
+++ b/view/frontend/templates/catalog/product/view/applepay.phtml
@@ -26,6 +26,9 @@
         if ('undefined' === typeof window.checkoutConfig) {
             window.checkoutConfig = <?php echo $this->getApplepayConfig(); ?>;
             window.isCustomerLoggedIn = window.checkoutConfig.isCustomerLoggedIn;
+            if ('undefined' === typeof window.checkoutConfig.totalsData) {
+                window.checkoutConfig.totalsData = {};
+            }
         }
     </script>
 
