BP-372 Magento 2 - Support Magento 2.3.5-p2 (2.4) - klarnakp / update telephone number validation from onkeyup to onchange event

--- a/view/frontend/web/template/payment/buckaroo_magento2_klarnakp.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_klarnakp.html
@@ -75,7 +75,7 @@
                                            type="text"
                                            class="input-text field"
                                            data-bind="
-                                       valueUpdate: 'keyup',
+                                       valueUpdate: 'change',
                                        value: telephoneNumber,
                                        attr: { 'data-validate': JSON.stringify({ 'required': true })}"
                                            name="payment[buckaroo_magento2_klarnakp][customer_telephone]">
