BP-372 Magento 2 - Support Magento 2.3.5-p2 (2.4) - set info of supported versions

--- a/view/adminhtml/templates/supportTab.phtml
+++ b/view/adminhtml/templates/supportTab.phtml
@@ -21,13 +21,13 @@
                         <span class="text">
                             <?php echo $block->escapeHtml(__('Magento Commerce'));?>:
                         </span>
-                        <span class="version"> 2.2.11, 2.3.4 </span>
+                        <span class="version"> 2.2.11, 2.3.5, 2.4.0 </span>
                     </li>
                     <li>
                         <span class="text">
                             <?php echo $block->escapeHtml(__('Magento Open Source'));?>:
                         </span>
-                        <span class="version"> 2.2.11, 2.3.4 </span>
+                        <span class="version"> 2.2.11, 2.3.5, 2.4.0 </span>
                     </li>
 
                     <li>
