--- a/view/adminhtml/templates/creditcard_sort_widget.phtml
+++ b/view/adminhtml/templates/creditcard_sort_widget.phtml
@@ -18,10 +18,27 @@
  * @license   https://tldrlegal.com/license/mit-license
  */
 ?>
-<div style="width: 100%; border: 1px solid #000; list-style: none" >
+<style>
+    p.sort_creditcard {
+        margin: 0.5rem 1rem;
+        padding: 0.5rem;
+    }
+
+    p.sort_creditcard:hover {
+        cursor: pointer;
+        background-color: #c8c8c8;
+    }
+
+    div.creditcard_sort_wrapper {
+        width: 100%;
+        border: 1px solid #adadad;
+        list-style: none"
+    }
+</style>
+<div class="creditcard_sort_wrapper">
     <input type="hidden" name="groups[buckaroo_magento2_payment_section][groups][buckaroo_magento2_creditcard][fields][sort_creditcards][value]" id="sort_cards"
            value="<?php echo $this->helper('Buckaroo\Magento2\Helper\Data')->getConfigCardSort()?>">
-    <div id="ul">
+    <div id="sort_creditcard_list">
 
     </div>
 
@@ -35,7 +52,7 @@
     ], function ($) {
         'use strict';
 
-        $('#ul').sortable({
+        $('#sort_creditcard_list').sortable({
             axis: 'y',
             tolerance: 'pointer',
             items: 'p'
@@ -48,24 +65,33 @@
             cardSortedArray.forEach(function (item, index) {
                 let p = document.createElement("p");
                 p.innerHTML = item;
-                $('#ul').append(p);
+                p.classList.add('sort_creditcard');
+                $('#sort_creditcard_list').append(p);
+            });
+        } else {
+            $('#payment_us_buckaroo_magento2_payment_section_buckaroo_magento2_creditcard_allowed_creditcards option:selected').each(function () {
+                let p = document.createElement("p");
+                p.innerHTML = $(this).text();
+                p.classList.add('sort_creditcard');
+                $('#sort_creditcard_list').append(p);
             });
         }
 
         $('#payment_us_buckaroo_magento2_payment_section_buckaroo_magento2_creditcard_allowed_creditcards').change(function () {
-            $('#ul p').remove();
+            $('#sort_creditcard_list p').remove();
 
             $('#payment_us_buckaroo_magento2_payment_section_buckaroo_magento2_creditcard_allowed_creditcards option:selected').each(function () {
                 let p = document.createElement("p");
                 p.innerHTML = $(this).text();
-                $('#ul').append(p);
+                p.classList.add('sort_creditcard');
+                $('#sort_creditcard_list').append(p);
             });
         });
 
         let cardList = '';
 
         $('#save').click(function () {
-            $('#ul p').each(function () {
+            $('#sort_creditcard_list p').each(function () {
                 cardList += $(this).text() + ',';
             });
             cardList = cardList.slice(0, -1);
