Magento 2 - klarnakp / fix calendar month issue

--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay.html
@@ -99,7 +99,7 @@
                                             changeMonth: true,
                                             changeYear: true,
                                             yearRange: ((new Date()).getFullYear()-120) + ':' + (new Date()).getFullYear(),
-                                            dateFormat: 'dd/mm/yy'
+                                            dateFormat: 'dd/MM/yy'
                                         }
                                    },
                                    valueUpdate: 'change',
