--- a/view/frontend/web/template/payment/buckaroo_magento2_klarnakp.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_klarnakp.html
@@ -98,21 +98,11 @@
                                             changeMonth: true,
                                             changeYear: true,
                                             yearRange: ((new Date()).getFullYear()-120) + ':' + (new Date()).getFullYear(),
-                                            dateFormat: 'dd/mm/yy',
-                                            onClose: function(dateText, inst) {
-                                                if (!window.buckarooKlarnaDob && dateText) {
-                                                    setTimeout(function() {
-                                                        jQuery('#buckaroo_magento2_klarnakp_DoB').val(dateText);
-                                                    },100);
-                                                }
-                                                if (window.buckarooKlarnaDob) {
-                                                    jQuery('#buckaroo_magento2_klarnakp_DoB').val(window.buckarooKlarnaDob);
-                                                    window.buckarooKlarnaDob = null;
-                                                }
-                                            }
+                                            dateFormat: 'dd/MM/yy'
                                         }
                                    },
                                    valueUpdate: 'change',
+                                   value: dateValidate,
                                    attr: { 'data-validate': JSON.stringify({ 'required': true, 'validate-date-au': true })}"
                                        name="payment[buckaroo_magento2_klarnakp][customer_DoB]">
                             </div>
