--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay2.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay2.html
@@ -98,7 +98,7 @@
                                             changeMonth: true,
                                             changeYear: true,
                                             yearRange: ((new Date()).getFullYear()-120) + ':' + (new Date()).getFullYear(),
-                                            dateFormat: 'dd/mm/yy'
+                                            dateFormat: 'dd/MM/yy'
                                         }
                                    },
                                    valueUpdate: 'change',
