BP-28 - Add payment method Tinka

--- a/view/adminhtml/web/css/sales_styles.css
+++ b/view/adminhtml/web/css/sales_styles.css
@@ -74,6 +74,7 @@
 .buckaroo_magento2_payment_capayablein3,
 .buckaroo_magento2_payment_capayablepostpay,
 .buckaroo_magento2_payment_pospayment
+.buckaroo_magento2_payment_tinka
 {
     float:left;
     width: 100%;
@@ -355,6 +356,19 @@
 /* pospayment */
 .buckaroo_magento2_payment_pospayment:before {
     background: url(../images/buckaroo_magento2_pospayment_title.png) no-repeat;
+    float: left;
+    margin-right: 10px;
+    margin-top: -4px;
+    background-size: auto 26px;
+    width: 73px;
+    height: 31px;
+    content: ' ';
+    display :block;
+}
+
+/* tinka */
+.buckaroo_magento2_payment_tinka:before {
+    background: url(../images/buckaroo_magento2_tinka_title.svg) no-repeat;
     float: left;
     margin-right: 10px;
     margin-top: -4px;
