BP-410 Magento 2 - Fix Apple Pay in combination with OneStepCheckout

--- a/view/frontend/web/template/payment/buckaroo_magento2_applepay.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_applepay.html
@@ -42,7 +42,7 @@
             <!--/ko-->
         </div>
 
-        <div class="actions-toolbar">
+        <div class="actions-toolbar" style="display: block;">
             <div class="primary">
                 <div id="apple-pay-wrapper" data-bind="afterRender: showPayButton"></div>
             </div>
