--- a/view/adminhtml/web/css/adminhtml_system_config_edit.css
+++ b/view/adminhtml/web/css/adminhtml_system_config_edit.css
@@ -354,3 +354,35 @@
     width:0;
     height:0;
 }
+
+.sort_creditcard {
+    margin: 0.5rem 1rem;
+    padding: 0.5rem;
+}
+
+.sort_creditcard:hover {
+    cursor: pointer;
+    background-color: #c8c8c8;
+}
+
+.creditcard_sort_wrapper {
+    width: 100%;
+    border: 1px solid #adadad;
+    list-style: 'none'
+}
+
+.sort_giftcards {
+    margin: 0.5rem 1rem;
+    padding: 0.5rem;
+}
+
+.sort_giftcards:hover {
+    cursor: pointer;
+    background-color: #c8c8c8;
+}
+
+.giftcards_sort_wrapper {
+    width: 100%;
+    border: 1px solid #adadad;
+    list-style: 'none'
+}
