BP-440 Allow refunds for PayPerEmail

--- a/view/adminhtml/templates/info/payment_method.phtml
+++ b/view/adminhtml/templates/info/payment_method.phtml
@@ -34,7 +34,16 @@ if ($giftCards = $block->getGiftCards()) {
     }
 }
 ?>
+
+<?php
+if ($method = $block->getPayPerEmailMethod()) {?>
+        <div class="buckaroo_magento2_payment_" style="margin-bottom:10px">
+            <?php echo $block->escapeHtml($method['label']) ?>
+        </div>
+<?php } ?>
+
 <?php $method = $block->getMethod(); ?>
 <div class="buckaroo_magento2_payment_<?php echo $block->escapeHtml($method->buckarooPaymentMethodCode); ?>">
     <?php echo $block->escapeHtml($block->getMethod()->getTitle()) ?>
 </div>
+
