--- a/view/frontend/web/template/payment/buckaroo_magento2_creditcards.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_creditcards.html
@@ -15,7 +15,8 @@
         </div>
 
         <div class="payment-method-second-col billing-address-form">
-            <form data-hasrequired="* Required Fields" data-bind="mageInit: { 'validation': [] }">
+            <form data-bind="mageInit: { 'validation': [] },
+                  attr: {'data-hasrequired': $t('* Required Fields')}">
                 <fieldset class="fieldset payment card styled">
                           <!--data-bind="css: CardDesign ? 'styled' : 'blank'">-->
 
