--- a/view/frontend/web/template/payment/buckaroo_magento2_paymentguarantee.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_paymentguarantee.html
@@ -19,7 +19,8 @@
         </div>
 
         <div class="payment-method-second-col billing-address-form">
-            <form data-hasrequired="* Required Fields" data-bind="mageInit: { 'validation': [] }">
+            <form data-bind="mageInit: { 'validation': [] },
+                  attr: {'data-hasrequired': $t('* Required Fields')}">
                 <fieldset class="fieldset payment">
 
                 <div class="field required">
