--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay20.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay20.html
@@ -28,6 +28,7 @@
                                     <input type="radio" id="buckaroo_magento2_afterpay20_genderSelectMan"
                                            data-bind="
                                            value: '1',
+                                           event: { change: selectPaymentMethod },
                                            click: setSelectedGender.bind($data, '1'),
                                            attr: { 'data-validate': JSON.stringify({ 'required': true }) },
                                            checked: genderValidate
@@ -124,6 +125,7 @@
                                             dateFormat: 'dd/mm/yy'
                                         }
                                    },
+                                   event: { change: selectPaymentMethod },
                                    valueUpdate: 'change',
                                    value: dateValidate,
                                    attr: { 'data-validate': JSON.stringify({ 'required': true, 'validate-date-au': true })}"
@@ -142,6 +144,7 @@
                                    type="checkbox"
                                    data-bind="
                                    checked: termsValidate,
+                                   event: { change: selectPaymentMethod },
                                    attr: { 'data-validate': JSON.stringify({ 'required': true})}"
                                    name="payment[buckaroo_magento2_afterpay20][termsCondition]">
                             <span>
