--- a/view/adminhtml/templates/sales/order/create/billingmethod/payperemail.phtml
+++ b/view/adminhtml/templates/sales/order/create/billingmethod/payperemail.phtml
@@ -39,6 +39,7 @@
         </div>
     </div>
 
+    <?php $customerDetails = $block->getMethod()->helper->getPPeCustomerDetails(); ?>
     <div class="admin__field _required">
         <label class="label admin__field-label" for="buckaroo_magento2_payperemail_BillingFirstName">
             <span><?php echo $block->escapeHtml(__('Billing First Name:')); ?></span>
@@ -47,6 +48,7 @@
             <input id="buckaroo_magento2_payperemail_BillingFirstName"
                    class="input-text field"
                    type="text"
+                   value="<?php echo $customerDetails ? $block->escapeHtml($customerDetails['firstName']) : ''; ?>"
                    data-bind="valueUpdate: 'keyup', attr: { 'data-validate': JSON.stringify({ 'required': true }) }"
                    name="payment[customer_billingFirstName]"
             >
@@ -61,6 +63,7 @@
             <input id="buckaroo_magento2_payperemail_BillingLastName"
                    class="input-text field"
                    type="text"
+                   value="<?php echo $customerDetails ? $block->escapeHtml($customerDetails['lastName']) : ''; ?>"
                    data-bind="valueUpdate: 'keyup', attr: { 'data-validate': JSON.stringify({ 'required': true }) }"
                    name="payment[customer_billingLastName]"
             >
@@ -75,6 +78,7 @@
             <input id="buckaroo_magento2_payperemail_Email"
                    class="input-text field"
                    type="text"
+                   value="<?php echo $customerDetails ? $block->escapeHtml($customerDetails['email']) : ''; ?>"
                    data-bind="
                        valueUpdate: 'keyup',
                        attr: { 'data-validate': JSON.stringify({ 'required': true, 'validate-email': true }) }
