--- a/view/frontend/templates/checkout/payconiq/pay.phtml
+++ b/view/frontend/templates/checkout/payconiq/pay.phtml
@@ -5,7 +5,7 @@
         <div id="buckaroo_magento2_payconiq_qr"></div>
 
         <button id="buckaroo_magento2_payconiq_cancel" type="button" title="Cancel" data-bind="click: cancelPayment">
-            <span>Cancel</span>
+            <span><?php echo __('Cancel')?></span>
         </button>
     </div>
 </div>
