--- a/view/frontend/layout/checkout_index_index.xml
+++ b/view/frontend/layout/checkout_index_index.xml
@@ -51,6 +51,15 @@
                                                                 </item>
                                                             </item>
                                                         </item>
+                                                        <item name="grand-total" xsi:type="array">
+                                                            <item name="component" xsi:type="string">Buckaroo_Magento2/js/view/checkout/summary/grand-total</item>
+                                                            <item name="config" xsi:type="array">
+                                                                <item name="exclTaxLabel" xsi:type="string" translate="true">Order Total Excl. Tax</item>
+                                                                <item name="inclTaxLabel" xsi:type="string" translate="true">Order Total Incl. Tax</item>
+                                                                <item name="basicCurrencyMessage" xsi:type="string" translate="true">You will be charged for</item>
+                                                                <item name="title" xsi:type="string" translate="true">Order Total</item>
+                                                            </item>
+                                                        </item>
                                                     </item>
                                                 </item>
                                             </item>
