BP-544 - #49 Fix Cancel button click action

--- a/view/frontend/templates/checkout/payconiq/pay.phtml
+++ b/view/frontend/templates/checkout/payconiq/pay.phtml
@@ -16,9 +16,10 @@
 
         payconiqPay.setTransactionKey(transactionKey);
         payconiqPay.showQrCode();
-
-        cancelPayment = function() {
-            payconiqPay.cancelPayment();
-        }
     });
+    cancelPayment = function() {
+        require(['buckaroo/payconiq/pay'], function (payconiqPay) {
+            payconiqPay.cancelPayment();
+        });
+    }
 </script>
