BP-599, #60 No error message when iDeal issuer not selected

--- a/view/frontend/web/template/payment/buckaroo_magento2_creditcard.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_creditcard.html
@@ -33,7 +33,7 @@
                                              'width': 30,
                                              'height': 20 }"
                                             />
-                                    <input class="card-types-input" type="radio" data-bind="value: code, text: name, click: $parent.setSelectedCard" name="card"> <!-- ko text: name --><!--/ko-->
+                                    <input class="card-types-input" type="radio" data-bind="value: code, text: name, click: $parent.setSelectedCard" data-validate="{'validate-one-required-by-name':true}" name="card"> <!-- ko text: name --><!--/ko-->
                                 </label>
                                 <!--/ko-->
                             <!--/ko-->
