--- a/view/frontend/web/css/styles.css
+++ b/view/frontend/web/css/styles.css
@@ -512,12 +512,12 @@
 
 /* ===================== PayPerEmail ============================ */
 .buckaroo_magento2_payperemail .buckaroo_magento2_image_title:after {
-    /*background: url(../images/buckaroo_magento2_payperemail_title.png) no-repeat; TODO: add PPE image */
+    background: url(../images/buckaroo_magento2_payperemail_title.png) no-repeat;
     float: right;
     margin-right: 10px;
-    margin-top: -3px;
-    background-size: auto 25px;
-    width: 41px;
+    margin-top: 0px;
+    background-size: auto 22px;
+    width: 80px;
     height: 25px;
     content: ' ';
 }
