BP-617 Add payment method Billink

--- a/view/frontend/layout/checkout_index_index.xml
+++ b/view/frontend/layout/checkout_index_index.xml
@@ -129,6 +129,9 @@
                                                                         <item name="buckaroo_magento2_afterpay20" xsi:type="array">
                                                                             <item name="isBillingAddressRequired" xsi:type="boolean">true</item>
                                                                         </item>
+                                                                        <item name="buckaroo_magento2_billink" xsi:type="array">
+                                                                            <item name="isBillingAddressRequired" xsi:type="boolean">true</item>
+                                                                        </item>
                                                                         <item name="buckaroo_magento2_eps" xsi:type="array">
                                                                         	<item name="isBillingAddressRequired" xsi:type="boolean">true</item>
                                                                         </item>
