--- a/view/frontend/web/css/styles.css
+++ b/view/frontend/web/css/styles.css
@@ -55,6 +55,7 @@
     .buckaroo_magento2_afterpay .payment-method-second-col,
     .buckaroo_magento2_afterpay2 .payment-method-second-col,
     .buckaroo_magento2_afterpay20 .payment-method-second-col,
+    .buckaroo_magento2_billink .payment-method-second-col,
     .buckaroo_magento2_sepadirectdebit .payment-method-second-col,
     .buckaroo_magento2_giropay .payment-method-second-col,
     .buckaroo_magento2_payperemail .payment-method-second-col,
@@ -80,6 +81,7 @@
     .buckaroo_magento2_afterpay .payment-method-billing-address,
     .buckaroo_magento2_afterpay2 .payment-method-billing-address,
     .buckaroo_magento2_afterpay20 .payment-method-billing-address,
+    .buckaroo_magento2_billink .payment-method-billing-address,
     .buckaroo_magento2_sepadirectdebit .payment-method-billing-address,
     .buckaroo_magento2_giropay .payment-method-billing-address,
     .buckaroo_magento2_payperemail .payment-method-billing-address,
@@ -108,6 +110,7 @@
     .magento-blank .buckaroo_magento2_afterpay .fieldset > .field:not(.choice) > .label,
     .magento-blank .buckaroo_magento2_afterpay2 .fieldset > .field:not(.choice) > .label,
     .magento-blank .buckaroo_magento2_afterpay20 .fieldset > .field:not(.choice) > .label,
+    .magento-blank .buckaroo_magento2_billink .fieldset > .field:not(.choice) > .label,
     .magento-blank .buckaroo_magento2_sepadirectdebit .fieldset > .field:not(.choice) > .label,
     .magento-blank .buckaroo_magento2_giropay .fieldset > .field:not(.choice) > .label,
     .magento-blank .buckaroo_magento2_payperemail .fieldset > .field:not(.choice) > .label,
@@ -134,6 +137,7 @@
     .magento-blank .buckaroo_magento2_afterpay .fieldset > .field:not(.choice) > .control,
     .magento-blank .buckaroo_magento2_afterpay2 .fieldset > .field:not(.choice) > .control,
     .magento-blank .buckaroo_magento2_afterpay20 .fieldset > .field:not(.choice) > .control,
+    .magento-blank .buckaroo_magento2_billink .fieldset > .field:not(.choice) > .control,
     .magento-blank .buckaroo_magento2_sepadirectdebit .fieldset > .field:not(.choice) > .control,
     .magento-blank .buckaroo_magento2_giropay .fieldset > .field:not(.choice) > .control,
     .magento-blank .buckaroo_magento2_payperemail .fieldset > .field:not(.choice) > .control,
@@ -158,6 +162,7 @@
     .magento-blank .buckaroo_magento2_afterpay .fieldset > .field.choice:before,
     .magento-blank .buckaroo_magento2_afterpay2 .fieldset > .field.choice:before,
     .magento-blank .buckaroo_magento2_afterpay20 .fieldset > .field.choice:before,
+    .magento-blank .buckaroo_magento2_billink .fieldset > .field.choice:before,
     .magento-blank .buckaroo_magento2_sepadirectdebit .fieldset > .field.choice:before,
     .magento-blank .buckaroo_magento2_giropay .fieldset > .field.choice:before,
     .magento-blank .buckaroo_magento2_payperemail .fieldset > .field.choice:before,
@@ -509,6 +514,24 @@
     /*float:left; width: 30%; */
 }
 
+/* ===================== Billink ============================ */
+.buckaroo_magento2_billink .buckaroo_magento2_image_title:after{
+    background: url(../images/buckaroo_magento2_billink_title.png) no-repeat;
+    float: right;
+    margin-right: 10px;
+    margin-top: 5px;
+    background-size: auto 22px;
+    width: 83px;
+    height: 25px;
+    content: ' ';
+}
+
+.buckaroo_magento2_billink .payment-method-second-col input:disabled{
+    color: #999;
+    background: #f2f2f2;
+    border: 1px solid #b6b6b6;
+    opacity: 1;
+}
 
 /* ===================== PayPerEmail ============================ */
 .buckaroo_magento2_payperemail .buckaroo_magento2_image_title:after {
