BP-622 Magento 2 - Soap Structure error when creating a new order with PPE (new customer)

--- a/view/adminhtml/templates/sales/order/create/billingmethod/payperemail.phtml
+++ b/view/adminhtml/templates/sales/order/create/billingmethod/payperemail.phtml
@@ -89,3 +89,17 @@
     </div>
 
 </fieldset>
+<script>
+    [
+        ['email', 'buckaroo_magento2_payperemail_Email'],
+        ['order-billing_address_firstname', 'buckaroo_magento2_payperemail_BillingFirstName'],
+        ['order-billing_address_lastname', 'buckaroo_magento2_payperemail_BillingLastName'],
+    ].forEach(function (item) {
+        if (
+            document.getElementById(item[1]) && (document.getElementById(item[1]).value.length == 0) &&
+            document.getElementById(item[0]) && (document.getElementById(item[0]).value.length > 0)
+        ) {
+            document.getElementById(item[1]).value = document.getElementById(item[0]).value;
+        }
+    })
+</script>
