BP-600 Magento 2 - Research and fix: Firefox shows iDEAL bank name twice #61

--- a/view/frontend/web/template/payment/buckaroo_magento2_emandate.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_emandate.html
@@ -30,7 +30,7 @@
                                      'width': 20,
                                      'height': 20 }"
                             />
-                            <input class="bank-types-input" type="radio" data-bind="value: code, text: name, click: $parent.setSelectedBank" name="bank"> <!-- ko text: name --><!--/ko-->
+                            <input class="bank-types-input" type="radio" data-bind="value: code, click: $parent.setSelectedBank" name="bank"> <!-- ko text: name --><!--/ko-->
                         </label>
                         <!--/ko-->
                     </div>
