--- a/view/frontend/web/template/payment/buckaroo_magento2_idealprocessing.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_idealprocessing.html
@@ -32,7 +32,7 @@
                                              'width': 20,
                                              'height': 20 }"
                                             />
-                                    <input class="bank-types-input" type="radio" data-bind="value: code, text: name, click: $parent.setSelectedBank" data-validate="{'validate-one-required-by-name':true}" name="bank"> <!-- ko text: name --><!--/ko-->
+                                    <input class="bank-types-input" type="radio" data-bind="value: code, click: $parent.setSelectedBank" data-validate="{'validate-one-required-by-name':true}" name="bank"> <!-- ko text: name --><!--/ko-->
                                 </label>
                             <!--/ko-->
                         <!--/ko-->
